--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,28 +23,22 @@ textarea {
 
 .description {
   white-space: pre-wrap;
-}
-
-.container {
-  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 40px;
 }
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
-}
-
-.row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;
-  border-radius: 15px;
+  padding-top: .8rem;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  height: 100;
 }
 
 .past {
@@ -63,16 +57,20 @@ textarea {
 }
 
 .saveBtn {
-  font-size: 28px;
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: #06AED5;
   color: white;
+  font-size: 28px;
+  text-align: center;
+  outline: none;
 }
 
-.saveBtn :hover {
+.saveBtn:hover {
+  color: black;
   font-size: 30px;
-  color: #000000;
   transition: all 0.3s ease-in-out;
+}
+
+.saveBtn:focus {
+  outline: none;
 }
