--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,5 +112,25 @@ textarea {
 }
 
 @media screen and (max-width: 980px) {
-  
+  .hour {
+    padding-left: 1%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    font-size: 50px;
+  }
+
+  .hour {
+    min-width: 15%;
+  }
+
+  .saveBtn {
+    min-width: 15%;
+  }
+
+  .description {
+    min-width: 50%;
+  }
 }
