--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Play", sans-serif;
   font-size: 16px;
   line-height: 1;
   background-color: var(--Sky);
@@ -36,15 +36,17 @@ textarea {
   text-align: center;
   background-color: transparent;
   color: var(--Azure);
+  padding-bottom: 30px;
   border-radius: 0;
   border-bottom: 8px solid var(--Night);
 }
 
 .description {
+  font-family: "Aldrich", sans-serif;
   white-space: pre-wrap;
   padding-top: 10px;
   padding-bottom: 10px;
-  height: 40px;
+  height: 50px;
 }
 
 .time-block {
@@ -53,6 +55,7 @@ textarea {
 }
 
 .hour {
+  font-family: "Play", sans-serif;
   background-color: var(--Zinc);
   color: var(--Night);
   font-weight: bold;
@@ -105,11 +108,23 @@ textarea {
 }
 
 .sub {
+  font-family: "Orbitron", sans-serif;
   color: var(--Zinc);
 }
 
 .date {
+  font-family: "Orbitron", sans-serif;
   color: var(--Absinthe);
+  padding-bottom: 12px;
+}
+
+.title {
+  font-family: "Aldrich", sans-serif;
+}
+
+#toggle {
+  margin: 0 auto;
+  max-width: 100px; 
 }
 
 @media screen and (max-width: 980px) {
